--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["poetry-core", "poetry-dynamic-versioning"]
-build-backend = "poetry_dynamic_versioning.backend"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "readmeai"
-version = "0"
+version = "0.4.076"
 description = "🚀 Generate beautiful README files from the terminal, powered by OpenAI's GPT language models 💫"
 authors = ["Eli <0x.eli.64s@gmail.com>"]
 license = "MIT"
@@ -58,10 +58,10 @@ click = "^8.1.7"
 pytest = "*"
 pytest-cov = "*"
 
-[tool.poetry-dynamic-versioning]
-enable = true
-vcs = "git"
-style = "semver"
+# [tool.poetry-dynamic-versioning]
+# enable = true
+# vcs = "git"
+# style = "semver"
 
 [tool.black]
 line-length = 79
@@ -103,7 +103,7 @@ source = ["readmeai", "tests"]
 omit = ["tests/*", "*__init__.py", "*/__init__.py"]
 
 [tool.coverage.report]
-fail_under = 100
+# fail_under = 100
 show_missing = true
 
 [tool.coverage.xml]
