--- a/readmeai/settings/config.toml
+++ b/readmeai/settings/config.toml
@@ -1,148 +1,110 @@
-# Model Settings
-[api]
-endpoint = "https://api.openai.com/v1/chat/completions"
-encoding = "cl100k_base"
-model = "gpt-4"
-rate_limit = 5
-tokens = 669
-tokens_max = 7999
-temperature = 1.1
-
 # CLI Options
 [cli]
-emojis = true
+emojis = false
 offline = false
 
 # Git Options
 [git]
 repository = "https://github.com/eli64s/readme-ai"
 
-# Paths
-[paths]
-dependency_files = "dependency_files.toml"
-identifiers = "identifiers.toml"
-ignore_files = "ignore_files.toml"
-language_names = "language_names.toml"
-language_setup = "language_setup.toml"
-shieldsio_icons = "data/shieldsio.json"
-skill_icons = "data/skill_icons.json"
-output = "readme-ai.md"
-
-# Prompts
-[prompts]
-features = """Hello! Analyze the repository {0} and following the instructions below to generate a comprehensive list of features.
-Please provide a comprehensive technical analysis of the codebase and its components.
-Consider the codebase as a whole and highlight the key characteristics, design patterns, architectural decisions, and any other noteworthy elements.
-Generate your response as a Markdown table with the following columns:
-
-|    | Feature            | Description                                                                                                        |
-|----|--------------------|--------------------------------------------------------------------------------------------------------------------|
-| ⚙️ | **Architecture**   | Analyze the structural design of the system here. Limit your response to <= 65 words.             |
-| 📄 | **Documentation**  | Discuss the quality and comprehensiveness of the documentation here. Limit your response to <= 65 words.|
-| 🔗 | **Dependencies**   | Examine the external libraries or other systems that this system relies on here. Limit your response to <= 65 words.|
-| 🧩 | **Modularity**     | Discuss the system's organization into smaller, interchangeable components here. Limit your response to <= 65 words.|
-| 🧪 | **Testing**        | Evaluate the system's testing strategies and tools here. Limit your response to <= 65 words.       |
-| ⚡️  | **Performance**    | Analyze how well the system performs, considering speed, efficiency, and resource usage here. Limit your response to <= 65 words.|
-| 🔐 | **Security**       | Assess the measures the system uses to protect data and maintain functionality here. Limit your response to <= 65 words.|
-| 🔀 | **Version Control**| Discuss the system's version control strategies and tools here. Limit your response to <= 65 words.|
-| 🔌 | **Integrations**   | Evaluate how the system interacts with other systems and services here. Limit your response to <= 65 words.|
-| 📶 | **Scalability**    | Analyze the system's ability to handle growth here. Limit your response to <= 65 words.           |
-
-Repository Details:
-\nDirectory Tree: {1}\nDependencies: {2}\nCode Summaries: {3}\n
-"""
-overview = """Generate a <=100 word summary that describes the capabilities of the repository {0}.
-Focus on the project's use-case and value proposition, not its technical details.
-Do not refer to the project using the URL provided. Below are more details of the
-project for you can get a deep nderstanding of the codebase and its components.
-Repository Details:
-\nDirectory Tree: {1}\nDependencies: {2}\nCode Summaries: {3}\n
-"""
-slogan = "Conceptualize a catchy and memorable slogan for the GitHub project: {0}. Limit your response to 80 characters."
-summaries = """Offer a comprehensive summary <= 80 words that encapsulates the core functionalities of the code below.
-Aim for precision and conciseness in your explanation, ensuring a fine balance between detail and brevity.
-\nDirectory Tree: {0}\nPath: {1}\nCode:\n{2}\n
-"""
+# Language Model API Settings
+[llm]
+endpoint = "https://api.openai.com/v1/chat/completions"
+encoding = "cl100k_base"
+model = "gpt-3.5-turbo"
+rate_limit = 5
+tokens = 669
+tokens_max = 3999
+temperature = 1.0
 
 # Markdown Templates
 [md]
+align = "center"
+image = ""
 tables = ""
 default = "► INSERT-TEXT"
 dropdown = """<details closed><summary>{}</summary>\n\n{}\n\n</details>\n"""
 
-header = """<div align="center">
-<h1 align="center">
-<img src="https://raw.githubusercontent.com/PKief/vscode-material-icon-theme/ec559a9f6bfd399b82bb44393651661b08aaf7ba/icons/folder-markdown-open.svg" width="100" />
-<br>{0}</h1>
-<h3>◦ {1}</h3>
+header = """<div align="{0}">
+<h1><img src={1} width="150" />
+<br>{2}</h1>
+<h3>◦ {3}</h3>
 <h3>◦ Developed with the software and tools below.</h3>
 """
-
-badges = """<p align="center">
-{0}
-</p>
-<img src="https://img.shields.io/github/license/{1}?style={2}&color=5D6D7E" alt="GitHub license" />
-<img src="https://img.shields.io/github/last-commit/{1}?style={2}&color=5D6D7E" alt="git-last-commit" />
-<img src="https://img.shields.io/github/commit-activity/m/{1}?style={2}&color=5D6D7E" alt="GitHub commit activity" />
-<img src="https://img.shields.io/github/languages/top/{1}?style={2}&color=5D6D7E" alt="GitHub top language" />
-</div>
-\n---
+header_left = """[<img src={0} height="120" align="left">]({0})
+# {1}
+### {2}\n
 """
 
-badges_alt = """
-<div align="center">
-    <h1>{}</h1>
-    <h3>◦ {}</h3>
-    <h3>◦ Developed with the software and tools below.</h3>
-</div>
-
-<p align="center">
-  <a href="https://skillicons.dev">
-    <img src={} />
-  </a>
-</p>
-
----
-"""
-
-badges_offline = """<p align="center">
-{0}
+badges_offline = """<p align="{0}">
+{1}
 </p>
 </div>
-\n---
+<hr>
 """
-
-badge_style="flat-square"
+badges_shieldsio = """<p align="{0}">
+{1}
+</p>
+<img src="https://img.shields.io/github/license/{2}?style={3}&color=5D6D7E" alt="GitHub license" />
+<img src="https://img.shields.io/github/last-commit/{2}?style={3}&color=5D6D7E" alt="git-last-commit" />
+<img src="https://img.shields.io/github/commit-activity/m/{2}?style={3}&color=5D6D7E" alt="GitHub commit activity" />
+<img src="https://img.shields.io/github/languages/top/{2}?style={3}&color=5D6D7E" alt="GitHub top language" />
+</div>
+<hr>
+"""
+badges_skills = """
+<div align="{0}">
+<h1><img src={1} width="150" />
+<br>{2}</h1>
+<h3>◦ {3}</h3>
+<h3>◦ Developed with the software and tools below.</h3>
+</div>
+<p align="{4}">
+<a href="https://skillicons.dev">
+<img src="{5}">
+</a>
+</p>
+<hr>
+"""
+badges_style="flat"
 
 toc = """
 ## 📖 Table of Contents
 - [📖 Table of Contents](#-table-of-contents)
 - [📍 Overview](#-overview)
-- [📦 Features](#-features)
+- [⚙️ Features](#-features)
 - [📂 repository Structure](#-repository-structure)
-- [⚙️ Modules](#modules)
-- [🚀 Getting Started](#-getting-started)
-    - [🔧 Installation](#-installation)
-    - [🤖 Running {0}](#-running-{0})
+- [📦 Modules](#modules)
+- [🧑‍💻 Getting Started](#-getting-started)
+    - [► Installation](#-installation)
+    - [🚀 Run {0}](#-run-{0})
     - [🧪 Tests](#-tests)
 - [🛣 Roadmap](#-roadmap)
 - [🤝 Contributing](#-contributing)
 - [📄 License](#-license)
 - [👏 Acknowledgments](#-acknowledgments)
-\n---
+
+---
 """
 
 intro = """
-\n## 📍 Overview
-\n{}
-\n---
-\n## 📦 Features
-\n{}
-\n---
+
+## 📍 Overview
+
+{}
+
+---
+
+## ⚙️ Features
+
+{}
+
+---
 """
 
 tree = """
-\n## 📂 Repository Structure
+
+## 📂 Repository Structure
 
 ```sh
 {0}
@@ -152,27 +114,37 @@ tree = """
 """
 
 modules = """
-\n## ⚙️ Modules
+\n## 📦 Modules
 """
 setup = """---
-\n## 🚀 Getting Started
+
+## 🧑‍💻 Getting Started
 
 ***Dependencies***
 
-Please ensure you have the following dependencies installed on your system:
-\n`- ℹ️ Dependency 1`
-\n`- ℹ️ Dependency 2`
-\n`- ℹ️ ...`
+Ensure you have the following dependencies installed on your system:
+`- ℹ️ Dependency 1`
+`- ℹ️ Dependency 2`
+`- ℹ️ ...`
 
-### 🔧 Installation
-\n1. Clone the {0} repository:
-```sh\ngit clone {1}\n```
-\n2. Change to the project directory:
-```sh\ncd {0}\n```
-\n3. Install the dependencies:
-```sh\n{2}\n```
+### ► Installation
 
-### 🤖 Running {0}
+1. Clone the {0} repository:
+```sh
+git clone {1}
+```
+
+2. Change to the project directory:
+```sh
+cd {0}
+```
+
+3. Install the dependencies:
+```sh
+{2}
+```
+
+### 🚀 Run {0}
 \n```sh\n{3}\n```
 
 ### 🧪 Tests
@@ -239,8 +211,68 @@ This project is protected under the [SELECT-A-LICENSE](https://choosealicense.co
 
 - List any resources, contributors, inspiration, etc. here.
 
-[**Return**](#Top)
+[**RETURN**](#Top)
 
 ---
 
+"""
+
+# Paths
+[paths]
+dependency_files = "dependency_files.toml"
+identifiers = "identifiers.toml"
+ignore_files = "ignore_files.toml"
+language_names = "language_names.toml"
+language_setup = "language_setup.toml"
+shieldsio_icons = "data/shieldsio.json"
+skill_icons = "data/skill_icons.json"
+output = "readme-ai.md"
+
+# Prompts
+[prompts]
+features = """Hello! Analyze the repository {0} and following the instructions below
+to generate a comprehensive list of features. Please provide a comprehensive technical
+analysis of the codebase and its components. Consider the codebase as a whole and highlight
+the key characteristics, design patterns, architectural decisions, and any other noteworthy
+elements. Generate your response as a Markdown (.md) table that strictly adheres to the format:
+
+|    | Feature            | Description                                                                                                        |
+|----|--------------------|--------------------------------------------------------------------------------------------------------------------|
+| ⚙️ | **Architecture**   | Analyze the structural design of the system here. Limit your response to a maximum of 40 tokens.             |
+| 📄 | **Documentation**  | Discuss the quality and comprehensiveness of the documentation here. Limit your response to a maximum of 40 tokens.|
+| 🔗 | **Dependencies**   | Examine the external libraries or other systems that this system relies on here. Limit your response to a maximum of 40 tokens.|
+| 🧩 | **Modularity**     | Discuss the system's organization into smaller, interchangeable components here. Limit your response to a maximum of 40 tokens.|
+| 🧪 | **Testing**        | Evaluate the system's testing strategies and tools here. Limit your response to a maximum of 40 tokens.       |
+| ⚡️  | **Performance**    | Analyze how well the system performs, considering speed, efficiency, and resource usage here. Limit your response to a maximum of 40 tokens.|
+| 🔐 | **Security**       | Assess the measures the system uses to protect data and maintain functionality here. Limit your response to a maximum of 40 tokens.|
+| 🔀 | **Version Control**| Discuss the system's version control strategies and tools here. Limit your response to a maximum of 40 tokens.|
+| 🔌 | **Integrations**   | Evaluate how the system interacts with other systems and services here. Limit your response to a maximum of 40 tokens.|
+| 📶 | **Scalability**    | Analyze the system's ability to handle growth here. Limit your response to a maximum of 40 tokens.           |
+
+Code repository information:\n
+\nDirectory tree structure: {1}
+\nDependencies: {2}
+\nCode summaries: {3}
+\n
+"""
+overview = """Generate a summary, of 99 words or less, that describes the capabilities
+of the code repository {0}. Focus on the project's use-case and value proposition,
+rather than its technical details. Do not refer to the project using the URL provided.
+Attached below are additional artifacts and metadata of the codebase and its components,
+to supplement your analysis. Code repository information:\n
+\nDirectory tree structure: {1}
+\nPackages and dependencies: {2}
+\nCode summaries: {3}
+\n
+"""
+slogan = """Create a catchy and engaging slogan for the code repository - {0}.
+Limit your response to 18 tokens. Do not refer to the project using the URL provided
+or its repository name. An example slogan is: "A simple, fast, and reliable package manager."""
+summaries = """Generate a comprehensive summary, 80 total tokens or less, that encapsulates the
+core functionalities of the code provided below. Aim for precision and conciseness in your explanation,
+ensuring a fine balance between detail and brevity. Code repository information:\n
+\nDirectory tree structure: {0}
+\nRelative path in relation to the repository root: {1}
+\nFile contents: {2}
+\n
 """
