--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,31 +4,31 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 name = "readmeai"
-version = "0.4.079"
-description = "🚀 Generate beautiful README files from the terminal, powered by OpenAI's GPT language models 💫"
+version = "0.4.080"
+description = "🚀 Auto-generate beautiful README files from the terminal, powered by OpenAI's GPT language models 💫"
 authors = ["Eli <0x.eli.64s@gmail.com>"]
 license = "MIT"
 readme = "README.md"
 homepage = "https://github.com/eli64s/readme-ai"
 documentation = "https://github.com/eli64s/readme-ai/blob/main/README.md"
 keywords = [
-  "auto-readme",
-  "automated-readme",
-  "automated-documentation",
   "readme",
-  "readme-md",
-  "readme-badges",
-  "readme-generator",
-  "readme-md-generator",
+  "devtools",
   "developer-tools",
-  "ai-assisted-development",
-  "llm",
-  "autodoc",
-  "chatgpt",
-  "gpt-4",
-  "gpt-readme",
+  "documentation-generator",
+  "readme-md",
+  "automated-documentation",
+  "readme-generator",
+  "ai-ml",
   "openai-api",
-  "shieldsio-badges"
+  "automated-readme",
+  "auto-readme",
+  "readme-md-generator",
+  "shieldsio-badges",
+  "gpt-4",
+  "llm",
+  "chatgpt",
+  "gpt-readme",
 ]
 include = ["readmeai", "readmeai.*"]
 
