--- a/readmeai/settings/ignore_files.toml
+++ b/readmeai/settings/ignore_files.toml
@@ -137,6 +137,7 @@ files = [
     "bundle_dmg",
     "gradlew",
     "icon.ico~dev",
+    "__init__.py",
     "start",
     "test_binary",
     "mkdocs.yml",
