--- a/readmeai/settings/language_names.toml
+++ b/readmeai/settings/language_names.toml
@@ -46,6 +46,7 @@ sql = "SQL"
 pgsql = "PostgreSQL"
 mssql = "SQL Server"
 sqlite = "SQLite"
+streamlit = "Streamlit"
 mysql = "MySQL"
 svg = "SVG"
 swift = "Swift"
