--- a/readmeai/settings/language_setup.toml
+++ b/readmeai/settings/language_setup.toml
@@ -36,7 +36,7 @@ Rust = ["cargo build", "cargo run", "cargo test"]
 Scala = ["sbt compile", "sbt run", "sbt test"]
 Scheme = ["csi -s main.scm", "/* No common unit test framework in Scheme */"]
 Shell = ["chmod +x main.sh", "./main.sh", "bats *.bats"]
-Streamlit = ["pip install -r requirements.txt", "streamlit run main.py", "pytest"]
+Streamlit = ["pip install -r requirements.txt", "streamlit run app.py", "pytest"]
 Swift = ["swift build", ".build/debug/myapp", "swift test"]
 TypeScript = ["npm install", "npm run build && node dist/main.js", "npm test"]
 VBScript = ["cscript main.vbs", "/* No common unit test framework in VBScript */"]
